<resources>
    <string name="app_name">PromiseKeeper</string>
    <string name="app_slogan">Never break your word</string>

    <string name="future_promises">Future Promises</string>
    <string name="fulfilled_promises">Fulfilled Promises</string>
    <string name="unfulfilled_promises">Unfulfilled Promises</string>
    <string name="general">General</string>
    <string name="about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_promise_details">Promise details</string>

    <string name="title_activity_create_promise">Make a promise</string>

    <string-array name="create_promise_repeat_array">
        <item>No repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="title_activity_get_location">Choose promise location</string>
    <string name="create_promise_title_error">Promise name is mandatory</string>
    <string name="create_promise_base_time_default">Pick a date</string>
    <string name="create_promise_base_time_error">Please fill the base time</string>
    <string name="create_promise_title_hint">Promise title</string>
    <string name="create_promise_description_hint">Promise description</string>
    <string name="create_promise_contact_guard_number_hint1">Contact guard number (optional)</string>
    <string name="create_promise_contact_guard_number_hint2">Choose guard contact</string>
    <string name="create_promise_repeat_interval">Repeat interval</string>
    <string name="create_promise_choose_a_promise_type">Choose a promise type:</string>
    <string name="create_promise_general">General</string>
    <string name="create_promise_location_based">Location based</string>
    <string name="create_promise_call_based">Call based</string>
    <string name="create_promise_description_error">Please fill a promise description</string>
    <string name="create_promise_promise_location">Promise location:</string>
    <string name="create_promise_choose_location">Choose location</string>
    <string name="create_promise_contact_call_number">Contact call number:</string>
    <string name="create_promise_choose_contact_to_call">Choose contact to call</string>
    <string name="create_promise_create_new_promise">Create new promise</string>
    <string name="promise_details_promise_next_time">Promise next time:</string>
    <string name="promise_details_description">Description:</string>
    <string name="promise_details_promise_type">Promise type:</string>
    <string name="promise_details_promise_repeat_interval">Promise repeat interval:</string>
    <string name="promise_details_guard_contact_number">Guard contact number:</string>
    <string name="promise_details_call_contact_number">Call contact number:</string>
    <string name="promise_details_promise_location">Promise location:</string>
    <string name="promise_details_promise_base_time">Promise base time:</string>
    <string name="promise_details_promise_status">Promise status:</string>
    <string name="ask_general_promise_prefece">Did you keep the following promise:</string>
    <string name="ask_general_promise_promise_is_kept">Promise is kept</string>
    <string name="ask_general_promise_promise_wasn_t_kept">Promise wasn\'t kept</string>
    <string name="permission_request_message_0">There is a need for the following permissions:</string>
    <string name="permission_request_message_1">1. Location - in order to validate location based promises.</string>
    <string name="permission_request_message_2">2. Read call log - in order to validate a call based promises.</string>
    <string name="permission_request_message_3">3. Send SMS - for promise guard capability</string>
    <string name="delete_promise">Delete promise</string>
    <string name="about_welcome_title">Welcome to promise keeper, the application that will help you keep your word!</string>
    <string name="about_promise_details">When creating a new promise, one shall provide the following details:</string>
    <string name="about_details_item_1">1. Title and short description</string>
    <string name="about_details_item_2">2. Base date - The date which the promise will be validated</string>
    <string name="about_details_item_3">3. Guard contact (optional) - A contact which will help you to keep your promise. he will be notified via SMS each time you fail to keep this promise</string>
    <string name="about_details_item_4">4. Repeat interval</string>
    <string name="about_details_item_5">5. Promise type - there are 3 types of promises:</string>
    <string name="about_details_item_6">* General promise - The user make a general promise (e.g \'If I forget you, Jerusalem, may my right hand forget its skill\'). The validation of the promise fulfillment will be provided by the user.</string>
    <string name="about_details_item_7">* Location promise - The user issue a location based promise (e.g \'Go to the gym each thursday\'). The user need to provide the location (e.g gym\'s location). and the applciation will validate the promise\'s fulfillment via GPS.</string>
    <string name="about_details_item_8">* Call based promise - The user issue a call based promise (e.g \'Call my grandparents once a month\'). Then, user provides the promise call number (e.g grandparents\' number). Then the application will validate the promise fulfillmet via call log history</string>
    <string name="ok">OK</string>
    <string name="create_promise_discard_message">Are you sure you want to discard this new promise?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="promise_details_general_ask">Did you keep this promise?</string>
</resources>
