<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_future_promises"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/future_promises" />
        <item
            android:id="@+id/nav_fulfilled_promises"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/fulfilled_promises" />
        <item
            android:id="@+id/nav_unfulfilled_promises"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/unfulfilled_promises" />
    </group>

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
