<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.omri.dev.promisekeeper.CreatePromiseActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_promise_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_promise_title_hint"
                    android:inputType="textCapSentences"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_promise_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_promise_description_hint"
                    android:imeActionId="@+id/login"
                    android:inputType="textMultiLine|textCapSentences"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/create_promise_base_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:text="@string/create_promise_base_time_default"
                android:textSize="15dp"
                android:onClick="chooseDateAndTime"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_promise_contact_guard_number_hint1" />
            <TextView
                android:id="@+id/create_promise_contact_guard_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:text="@string/create_promise_contact_guard_number_hint2"
                android:textSize="15dp"
                android:onClick="chooseContactGuard" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_promise_repeat_interval"/>
            <Spinner
                android:id="@+id/create_promise_repeat_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_promise_choose_a_promise_type"/>

            <RadioGroup
                android:id="@+id/create_promise_rbgroup_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/create_promise_rb_general">

                <RadioButton
                    android:id="@+id/create_promise_rb_general"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_promise_general" />
                <RadioButton
                    android:id="@+id/create_promise_rb_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_promise_location_based"/>
                <RadioButton
                    android:id="@+id/create_promise_rb_call"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_promise_call_based"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:id="@+id/create_promise_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_promise_promise_location" />
                <TextView
                    android:id="@+id/create_promise_location_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:text="@string/create_promise_choose_location"
                    android:textSize="15dp"
                    android:onClick="chooseLocation" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_promise_contact_call_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_promise_contact_call_number" />
                <TextView
                    android:id="@+id/create_promise_contact_call_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:text="@string/create_promise_choose_contact_to_call"
                    android:textSize="15dp"
                    android:onClick="chooseContactCall" />
            </LinearLayout>

            <Button
                android:id="@+id/create_promise_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_promise_create_new_promise"
                android:textStyle="bold"
                android:onClick="createNewPromise"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
