<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.omri.dev.promisekeeper.AskGeneralPromiseFulfillment">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_general_promise_prefece"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ask_general_promise_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="The title of the promise"
                android:paddingTop="5dp"/>
            <TextView
                android:id="@+id/ask_general_promise_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="The description of the promise. It may be very very long. maybe pass couple of lines"
                android:paddingTop="5dp"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_general_promise_promise_is_kept"
            android:onClick="promiseKept"
            android:layout_alignParentStart="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_general_promise_promise_wasn_t_kept"
            android:onClick="promiseIsNotKept"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
